# advanced-codeowners

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  action.yml  pyproject.toml
.github/workflows/: adv-codeowners.yml  docker-build-push.yml  test.yml
src/: __init__.py  codeowners.py  github_api.py  main.py  utils.py
src/stacks/: infix_to_postfix_conversion.py
tests/integration/: test_github_api_integration.py  update_fixtures.py
tests/integration/fixtures/: pull_request.json  pull_request.json.json.prev  reviews.json.json.prev
tests/resources/: codeowners-syntax.md
tests/resources/example-repo/.github/: CODEOWNERS
tests/resources/integration-tests/codeowners-example-v1/.github/: CODEOWNERS
tests/unit/: test_codeowners.py  test_github_api.py
tests/unit/test_stacks/: test_infix_to_postfix_conversion.py
